<resources>
    <string name="app_name">TripBuddy</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="or_connect">Or connect</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="password">Password</string>
    <string name="please_sign_in_to_continue_our_app">Please sign in to Buddy Trip</string>
    <string name="sign_in_now">Sign in now</string>
    <string name="back">Back</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="please_fill_the_details_and_create_account">Please fill the details and create account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_must_be_8_characters">Password must be 8 characters</string>
    <string name="logo">Logo</string>
    <string name="we_have_sent_password_recovery_instruction_to_your_email">We have sent password recovery instruction to your email</string>
    <string name="check_your_email">Check your email</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="please_check_your_email_www_uihut_gmail_com_to_see_the_verification_code">Please check your email www.uihut@gmail.com to see the verification code</string>
    <string name="please_check_your_email_to_see_the_verification_code" />
    <string name="verify">Verify</string>
    <string name="forgot_password">Forgot password</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="niladri_reservoir">Niladri Reservoir</string>
    <string name="tekerghat_sunamganj">Tekerghat, Sunamganj</string>
    <string name="view_all">View all</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="explore_the_beautiful_world">Explore the Beautiful world!</string>
    <string name="notifications">Notifications</string>
    <string name="best_destination">Best Destination</string>
    <string name="explore_the">Explore the</string>
    <string name="beautiful_world">Beautiful World!</string>
    <string name="slogan">Slogan</string>
    <string name="cancel">Cancel</string>
    <string name="travel_trips">Travel Trips</string>
    <string name="travel_trip_value">238</string>
    <string name="reward_points">Reward Points</string>
    <string name="travel_value">360</string>
    <string name="bucket_list">Bucket List</string>
    <string name="bucket_value">473</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="previous_trips">Previous Trips</string>
    <string name="settings">Settings</string>
    <string name="version">Version</string>
    <string name="example_notification">Get 60% off in our first booking</string>
    <string name="notification_time">Sun, 12:40 PM</string>
    <string name="notification_header">Super Offer</string>
    <string name="clear_all">Clear all</string>
    <string name="notification">Notification</string>
    <string name="make_all_read">Make all read</string>
    <string name="earlier">Earlier</string>
    <string name="recent">Recent</string>
    <string name="done">Done</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="last_name">Last Name</string>
    <string name="firstname">First name</string>
    <string name="example_phone">+88 01758-000666</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="location">Location</string>
    <string name="example_location">Sylhet, Bangladesh</string>
    <string name="next">Next</string>
    <string name="bg_image">background_image\n</string>
    <string name="get_started">Get Started</string>
    <string name="life_is_short_and_the_world_is_wide">Life is short and the world is wide</string>
    <string name="splash_2">It’s a big world out there go explore</string>
    <string name="splash_3">People don’t take trips, trips take people</string>
    <string name="splash_title_3">To get the best of your adventure you just need to leave and go where you like. we are waiting for you</string>
    <string name="splash_title">At Friends tours and travel, we customize reliable and trustworthy educational tours to destinations all over the world</string>
    <string name="splash_title_2">To get the best of your adventure you just need to leave and go where you like. we are waiting for you</string>
    <string name="history">History</string>
    <string name="example_date">22 October</string>
    <string name="example_date_of_week">S</string>
    <string name="schedule">Schedule</string>
    <string name="bookmarked_places">Bookmarked places</string>
    <string name="example_destination_description">You will get a complete travel package on the beaches. Packages in the form of airline tickets, recommended Hotel rooms, Transportation, Have you ever been on holiday to the Greek ETC…</string>
    <string name="about_destination">About Destination</string>
    <string name="example_price">$59/Person</string>
    <string name="review">Review</string>
    <string name="example_vote">4.7 (2498)</string>
    <string name="detail">Detail</string>
    <string name="destination_picture">destination_picture</string>
    <string name="read_more">Read more</string>
    <string name="image">Image of a destination</string>
    <string name="add_to_schedule">Add to schedule</string>
    <string name="destination_name">Destination Name</string>
    <string name="write_your_review_here">Write your review here</string>
    <string name="submit">Submit</string>
    <string name="user_avatar">User Avatar</string>
    <string name="exampl_time">09:46</string>
    <string name="example_review">This is a review text.</string>
    <string name="write_review">Write Review</string>
    <string name="reviews">Reviews</string>
    <string name="write_a_review">Write a Review</string>
    <string name="write_your_review">Write your review...</string>
    <string name="enter_your_email_account_to_reset_your_password">Enter your email account to reset your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="string_twitter">string/twitter</string>
    <string name="sample_question">Sample Question?</string>
    <string name="sample_answer">Sample Answer</string>
    <string name="down_arrow">down arrow</string>
    <string name="q_and_a">Q and A</string>
    <string name="qna">QnA</string>
    <string name="example_time">today</string>
    <string name="example_rate">Rating: 4.5</string>
    <string name="select_date_and_time">Select Date and Time</string>
    <string name="check_in">Check In</string>
    <string name="date">Date: YYYY-MM-DD</string>
    <string name="time">Time: HH:MM</string>
    "
    />
</resources>