<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/destinationNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/destination_name"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/checkInDateTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/date"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/checkInTimeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/time"
        android:textSize="16sp" />

    <Button
        android:id="@+id/checkInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#397D54"
        android:text="@string/check_in"/>
</LinearLayout>
