<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <!-- Back button icon -->
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_back_arrow"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title -->

    <!-- Subtext -->

    <!-- Name Input -->

    <!-- Email Input -->

    <!-- Password Input -->

    <TextView
        android:id="@+id/signUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/urbanist_bold"
        android:gravity="center"
        android:text="@string/sign_up_now"
        android:textColor="#397D54"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <TextView
        android:id="@+id/signUpSubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/urbanist_regular"
        android:gravity="center"
        android:text="@string/please_fill_the_details_and_create_account"
        android:textColor="#546E7A"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpTitle" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:autofillHints="Name"
        android:background="@drawable/edittext_gray_background"
        android:fontFamily="@font/urbanist_regular"
        android:hint="@string/full_name"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpSubText"
        app:layout_constraintWidth_percent="0.85"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:autofillHints="email"
        android:background="@drawable/edittext_gray_background"
        android:fontFamily="@font/urbanist_regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        app:layout_constraintWidth_percent="0.85"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Password helper text -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:autofillHints="password"
        android:background="@drawable/edittext_gray_background"
        android:fontFamily="@font/urbanist_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintWidth_percent="0.85"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Sign Up Button -->

    <!-- Sign In link -->
    <TextView
        android:id="@+id/passwordHelperText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/urbanist_regular"
        android:gravity="center"
        android:text="@string/password_must_be_8_characters"
        android:textColor="#546E7A"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#397D54"
        android:text="@string/sign_up"
        android:fontFamily="@font/urbanist_regular"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordHelperText"
        app:layout_constraintWidth_percent="0.85"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/alreadyHaveAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_sign_in"
        android:textSize="14sp"
        android:textColor="#397D54"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/urbanist_regular"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center" />

    <!-- Social Media Connect -->
    <TextView
        android:id="@+id/orConnectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/urbanist_regular"
        android:gravity="center"
        android:text="@string/or_connect"
        android:textColor="#546E7A"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alreadyHaveAccountText" />

    <!-- Social media icons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/orConnectText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/facebookIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/facebook"
            android:src="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/instagramIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/instagram"
            android:src="@drawable/ic_instagram" />

        <ImageView
            android:id="@+id/twitterIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/string_twitter"
            android:src="@drawable/ic_twitter" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
