<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFFFFF"
    tools:context=".EditProfileActivity">

    <!-- Back Button (Top Left) -->
    <ImageView
        android:id="@+id/backButton"
        android:src="@drawable/ic_back_arrow"
        android:contentDescription="@string/back"
        android:layout_width="40dp"
        android:fontFamily="@font/urbanist_light"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Done Button (Top Right) -->
    <TextView
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textColor="#397D54"
        android:fontFamily="@font/urbanist_light"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Edit Profile Title -->

    <!-- Profile Picture -->
    <TextView
        android:id="@+id/editProfileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/edit_profile"
        android:textSize="18sp"
        android:textColor="#397D54"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile_picture"
        android:src="@drawable/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editProfileTitle"
        tools:ignore="ImageContrastCheck" />

    <!-- Change Profile Picture -->
    <TextView
        android:id="@+id/changeProfilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_profile_picture"
        android:textColor="#000000"
        android:textSize="14sp"
        android:fontFamily="@font/urbanist_medium"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <!-- First Name Label -->
    <TextView
        android:id="@+id/firstNameLabel"
        android:layout_width="70dp"
        android:layout_height="22dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:minHeight="48dp"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/firstname"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changeProfilePicture"
        tools:ignore="TextSizeCheck" />

    <!-- First Name Input -->
    <EditText
        android:id="@+id/firstNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/firstname"
        android:fontFamily="@font/urbanist_light"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstNameLabel"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Last Name Label -->
    <TextView
        android:id="@+id/lastNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/last_name"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstNameInput" />

    <!-- Last Name Input -->
    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/last_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:fontFamily="@font/urbanist_light"
        android:textColor="#000"
        android:textColorHint="#546E7A"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastNameLabel"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Location Label -->
    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/location"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastNameInput" />

    <!-- Location Input -->
    <EditText
        android:id="@+id/locationInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/example_location"
        android:fontFamily="@font/urbanist_light"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#000"
        android:textColorHint="#546E7A"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationLabel"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Mobile Number Label -->
    <TextView
        android:id="@+id/mobileNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/mobile_number"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationInput" />

    <!-- Mobile Number Input -->
    <EditText
        android:id="@+id/mobileNumberInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/example_phone"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColor="#000"
        android:textColorHint="#546E7A"
        android:fontFamily="@font/urbanist_light"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mobileNumberLabel"
        tools:ignore="VisualLintTextFieldSize" />

</androidx.constraintlayout.widget.ConstraintLayout>
