<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <!-- Title Sign In Now -->

    <!-- Subtitle Please Sign In -->

    <!-- Email Input -->

    <!-- Password Input -->

    <!-- Forgot Password -->

    <!-- Sign In Button -->

    <!-- Sign Up Prompt -->

    <TextView
        android:id="@+id/signInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/sign_in_now"
        android:textColor="#397D54"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#397D54"
        android:fontFamily="@font/urbanist_regular"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordText"
        app:layout_constraintWidth_percent="0.85"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/urbanist_regular"
        android:text="@string/forget_password"
        android:textColor="#397D54"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

    <TextView
        android:id="@+id/signUpPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/urbanist_regular"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="#397D54"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInButton" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:autofillHints="password"
        android:background="@drawable/edittext_gray_background"
        android:fontFamily="@font/urbanist_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintWidth_percent="0.85" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:autofillHints="password"
        android:background="@drawable/edittext_gray_background"
        android:drawablePadding="16dp"
        android:fontFamily="@font/urbanist_regular"
        android:hint="Email@example.com"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInSubtitle"
        app:layout_constraintWidth_percent="0.85"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/socialIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/socialConnectText">

        <!-- Facebook Icon -->
        <ImageView
            android:id="@+id/facebookIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/facebook"
            android:src="@drawable/ic_facebook" />

        <!-- Instagram Icon -->

        <!-- Twitter Icon -->

        <ImageView
            android:id="@+id/instagramIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/instagram"
            android:src="@drawable/ic_instagram" />

        <ImageView
            android:id="@+id/twitterIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/twitter"
            android:src="@drawable/ic_twitter" />

    </LinearLayout>

    <TextView
        android:id="@+id/socialConnectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/urbanist_regular"
        android:text="@string/or_connect"
        android:textColor="#546E7A"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpPrompt" />

    <TextView
        android:id="@+id/signInSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:fontFamily="@font/urbanist_regular"
        android:text="@string/please_sign_in_to_continue_our_app"
        android:textColor="#546E7A"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInTitle" />

    <!-- Social Media Section -->

    <!-- Social Media Icons -->

</androidx.constraintlayout.widget.ConstraintLayout>
